<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tof_vio</name>
  <version>0.1.0</version>
  <description>tof_imu_vo</description>

  <maintainer email="chensy1991@gmail.com">gh034</maintainer>
  <license>FreeBSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>